# diamonddaggifier

./: .gitignore  README.md
backend/: Cargo.toml  Rocket.toml
backend-warp/: Cargo.toml
backend-warp/src/: main.rs
backend-warp/src/ashcon/: mod.rs
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/mojang/: mod.rs
backend/src/skin_creation/: mod.rs
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/react-skinview3d/: index.es.js  index.es.js.map  index.js  index.js.map
