[package]
name = "backend_warp"
version = "0.1.0"
authors = ["Gijs de Jong <berichtaangijs@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"

reqwest = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23.12"