[package]
name = "diamonddagifier"
version = "0.1.0"
authors = ["Gijs de Jong <berichtaangijs@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.23.12"
rocket_cors = "0.5.2"
rocket-download-response = {git = "https://github.com/OxKitsune/rocket-download-response"}
async-trait = "0.1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

[dependencies.rocket]
version = "0.5.0-dev"
default-features = false
features = ["tls"]

[dependencies.rocket_contrib]
version = "0.5.0-dev"
default-features = false
features = ["json"]

[patch.crates-io]
rocket = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }
rocket_contrib = { git = 'https://github.com/SergioBenitez/Rocket', branch = "master" }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors.git", branch = "master" }